@@ -89,6 +89,9 @@ By DamienMcKenna: Properly formatted all comments in the main module file.
 #2742609 by DamienMcKenna: Added tests for core node revision handling.
 #2715573 by DamienMcKenna: Tests to confirm reverting a revision works as
   intended.
+#2546906 by DamienMcKenna: If a default display is not available for certain
+  Panelizer admin paths, display an appropriate error message instead of
+  throwing a 404 page.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
